# cpp-project-template

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
lib/: CMakeLists.txt
lib/include/lib/: lib.hpp
lib/src/: lib.cpp
tests/: CMakeLists.txt  test.cpp
